	  or writing out a file.   Global variable jumpok controls
	  when to not run the winch handles, static resizepending
	  is set, handler in main to run handle_sigwinch() when set.
	  Should fix segfaults when nano is initially suspended while 
	  reading in a file (found by Mike Frysinger).
	- Port to the Tandem NonStop Kernel (nsr-tandem-nsk). (Tom
	  Bates; minor tweaks by DLR)
- nano.c:
  handle_sigwinch()
	- Rework so that nano properly redraws the screen on systems
	  that don't have resizeterm() and/or wresize().  In curses, we
	  now leave and immediately reenter curses mode via endwin() and
	  refresh(), and then reinitialize all windows via
	  window_init().  In slang, the above routine will only work if
	  the resize made the window smaller, so we now leave and
	  immediately reenter screen management mode via
	  SLsmg_reset_smg() and SLsmg_init_smg(), and then reinitialize
	  all windows via window_init().  (DLR, adapted from code in
	  Minimum Profit 3.3.0 and mutt 1.4.2.1, respectively)
  main()
	- Don't call open_file with quiet flag set.  Fixes Debian bug 
	  #246956 (no warning when trying to open non-readable file).
	- Add an extra titlebar() call (useful when reading in a big 
	  file).
- nano.h:
	- Move the NANO_H include guard up before the first #include.
	  (DLR)
- configure.ac:
	- Remove the checks for resizeterm() and wresize(), as they're
	  no longer needed. (DLR)
- config.rpath:
	- Replace usage of egrep with grep -E, avoiding a XSI:ism (David
	  Weinehall)

GNU nano 1.2.3 - 2004.01.17
- General:
	- Translation updates (see po/ChangeLog for details).
	- Make sure the "historylog" option isn't included at all if
	  NANO_SMALL is defined. (DLR)
- files.c:
  read_file()
	- After we've read in a file and possibly converted it from
	  DOS/Mac format, set fileformat back to 0 to prevent erroneous
	  conversion messages when we read other files in. (DLR)
  do_browser()
  	- Allow '?' to open the help browser, for compatibility with