@@ -9,6 +9,9 @@ CVS code -
 	  reading in a file (found by Mike Frysinger).
 	- Port to the Tandem NonStop Kernel (nsr-tandem-nsk). (Tom
 	  Bates; minor tweaks by DLR)
+	- Fix memory corruption problems caused by assigning the
+	  return value of statusq() to answer, since statusq() changes
+	  the value that answer points to. (Christian Weisgerber)
 - nano.c:
   handle_sigwinch()
 	- Rework so that nano properly redraws the screen on systems
